--- a/angular/src/app/project/project.component.html
+++ b/angular/src/app/project/project.component.html
@@ -101,10 +101,28 @@
                                                 <select name="ProjectDepartmentId"
                                                         class="form-control"
                                                         id="ProjectDepartmentId" [(ngModel)]="projectDepartmentId"
-                                                       
                                                         #projectDepartmentIdModel="ngModel"
                                                         projectDepartmentId>
                                                     <option *ngFor="let department of departments" [value]="department.id">{{department.name}}</option>
+                                                </select>
+
+
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="col-md-6 mt-3">
+                                        <div class="form-group row mb-0">
+                                            <label class="col-md-3 col-form-label" for="ADDRESS">
+                                                {{ "Status" | localize }}
+                                            </label>
+                                            <div class="col-md-8">
+                                                <select name="ProjectStatusId"
+                                                        class="form-control"
+                                                        id="ProjectStatusId" [(ngModel)]="ProjectStatusId"
+                                                        #projectStatusIdModel="ngModel"
+                                                        projectStatusId>
+                                                    <option *ngFor="let ProjectStatus of allProjectStatus" [value]="ProjectStatus.id">{{ProjectStatus.name  | localize}}</option>
                                                 </select>
 
 
