--- a/angular/src/app/project/edit-project/edit-project.component.html
+++ b/angular/src/app/project/edit-project/edit-project.component.html
@@ -462,30 +462,6 @@
                             </div>
                         </tab>
 
-                        <tab [heading]="'History' | localize" class="pt-3 px-2">
-                            <div class="table-responsive">
-                                <table class="table table-striped table-bordered">
-                                    <thead class="bg-light">
-                                        <tr>
-                                            <th>{{ "ActionName" | localize }}</th>
-                                            <th>{{ "ActionNote" | localize }}</th>
-                                            <th>{{ "CreationDate" | localize }}</th>
-                                            <!--<th style="width: 310px;"></th>-->
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr *ngFor="let requestHistory of requestHistories">
-                                            <td>{{ requestHistory.actionName }}</td>
-                                            <td>{{ requestHistory.actionNotes }}</td>
-                                            <td>{{ requestHistory.creationTime  | date: 'dd/MM/yyyy'}}</td>
-
-                                        </tr>
-                                    </tbody>
-                                </table>
-                            </div>
-                        </tab>
-
-
                         <tab [heading]="'Attachments' | localize" class="pt-3 px-2">
                             <form class="form-horizontal" *ngIf="isGranted('Pages.Manage.Project') && project.status ==0"
                                   autocomplete="off"
@@ -524,7 +500,7 @@
                                                    required
                                                    [(ngModel)]="attachment.description"
                                                    #attachmentDescriptionModel="ngModel"
-                                                   #attachmentDescription/>
+                                                   #attachmentDescription />
                                             <abp-validation-summary [control]="attachmentDescriptionModel"
                                                                     [controlEl]="attachmentDescription"></abp-validation-summary>
                                         </div>
@@ -555,14 +531,13 @@
                                         <tr *ngFor="let attachment of attachments">
                                             <!--<td><a  href="{{baseURL+attachment.fileURL}}" download> {{ baseURL+attachment.fileURL}}</a></td>-->
                                             <td>{{ attachment.description }}</td>
-                                            <td *ngIf="isGranted('Pages.Manage.Project') && project.status ==0">
+                                            <td *ngIf="isGranted('Pages.Manage.Project')">
                                                 <button type="button" (click)="downloadMyFile(baseURL+attachment.fileURL)"
-                                                        class="btn btn-sm bg-secondary"
-                                                       >
+                                                        class="btn btn-sm bg-secondary">
                                                     <i class="fa fa-download"></i>
                                                     {{ "Download" | localize }}
                                                 </button>
-                                                <button type="button" *ngIf="isGranted('Pages.Manage.Project')"
+                                                <button type="button" *ngIf="isGranted('Pages.Manage.Project') && project.status ==0"
                                                         class="btn btn-sm bg-danger mx-2"
                                                         (click)="delete(attachment)">
                                                     <i class="fas fa-trash"></i>
@@ -574,6 +549,32 @@
                                 </table>
                             </div>
                         </tab>
+
+                        <tab [heading]="'ProjectHistory' | localize" class="pt-3 px-2">
+                            <div class="table-responsive">
+                                <table class="table table-striped table-bordered">
+                                    <thead class="bg-light">
+                                        <tr>
+                                            <th>{{ "ActionName" | localize }}</th>
+                                            <th>{{ "ActionNote" | localize }}</th>
+                                            <th>{{ "CreationDate" | localize }}</th>
+                                            <!--<th style="width: 310px;"></th>-->
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr *ngFor="let requestHistory of requestHistories">
+                                            <td>{{ requestHistory.actionName }}</td>
+                                            <td>{{ requestHistory.actionNotes }}</td>
+                                            <td>{{ requestHistory.creationTime  | date: 'dd/MM/yyyy'}}</td>
+
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </tab>
+
+
+
                     </tabset>
                 </div>
             </div>
