--- a/angular/src/app/requests/request-create/request-create.component.html
+++ b/angular/src/app/requests/request-create/request-create.component.html
@@ -68,7 +68,7 @@
                                            id="projectContractNumber"
                                            [(ngModel)]="projectContractNumber" />
                                     <!--<abp-validation-summary [control]="contractNumberModel"
-            [controlEl]="contractNumber"></abp-validation-summary>-->
+                                    [controlEl]="contractNumber"></abp-validation-summary>-->
                                 </div>
                             </div>
                             <div class="form-group row required col-6">
@@ -151,7 +151,7 @@
                                     <input type="date" [disabled]="request.id>0"
                                            class="form-control"
                                            name="inspectionDate"
-                                           [min]="completeDatemodel"
+                                           [min]="minDate"
                                            id="inspectionDate"
                                            required
                                            [(ngModel)]="InspectionDatemodel"
@@ -251,7 +251,8 @@
                                     {{ "PhoneNumberSiteResponsible1" | localize }}
                                 </label>
                                 <div class="col-md-9">
-                                    <input type="number" [disabled]="request.id>0"
+                                    <input type="text" [disabled]="request.id>0"
+                                             oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*?)\..*/g, '$1');"
                                            class="form-control"
                                            name="phomeNumberSiteResponsibleOne"
                                            id="phomeNumberSiteResponsibleOne"
@@ -269,7 +270,8 @@
                                     {{ "PhoneNumberSiteResponsible2" | localize }}
                                 </label>
                                 <div class="col-md-9">
-                                    <input type="number" [disabled]="request.id>0"
+                                    <input type="text" [disabled]="request.id>0"
+                                           oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*?)\..*/g, '$1');"
                                            class="form-control"
                                            name="phomeNumberSiteResponsibleTwo"
                                            id="phomeNumberSiteResponsibleTwo"
@@ -282,21 +284,21 @@
                             </div>
 
                             <!--<div class="form-group row required col-6">
-        <label class="col-md-3 col-form-label" for="ADDRESS">
-            {{ "MainRequestTypes" | localize }}
-        </label>
-        <div class="col-md-9">
-            <select name="mainRequestType" [disabled]="request.id>0"
-                    class="form-control"
-                    id="mainRequestType" [(ngModel)]="request.mainRequestType"
-                    #mainRequestTypeModel="ngModel"
-                    #mainRequestType required>
-                <option *ngFor="let mainRequestType of mainRequestTypes" [value]="mainRequestType.id">{{mainRequestType.name | localize}}</option>
-            </select>
-            <abp-validation-summary [control]="mainRequestTypeModel"
-                                    [controlEl]="mainRequestType"></abp-validation-summary>
-        </div>
-    </div>-->
+                                <label class="col-md-3 col-form-label" for="ADDRESS">
+                                    {{ "MainRequestTypes" | localize }}
+                                </label>
+                                <div class="col-md-9">
+                                    <select name="mainRequestType" [disabled]="request.id>0"
+                                            class="form-control"
+                                            id="mainRequestType" [(ngModel)]="request.mainRequestType"
+                                            #mainRequestTypeModel="ngModel"
+                                            #mainRequestType required>
+                                        <option *ngFor="let mainRequestType of mainRequestTypes" [value]="mainRequestType.id">{{mainRequestType.name | localize}}</option>
+                                    </select>
+                                    <abp-validation-summary [control]="mainRequestTypeModel"
+                                                            [controlEl]="mainRequestType"></abp-validation-summary>
+                                </div>
+                            </div>-->
 
                             <div class="form-group row required col-6">
                                 <label class="col-md-3 col-form-label" for="isLabTest">
@@ -339,7 +341,7 @@
                             {{ "Save" | localize }}
                         </button>
 
-                        <button *ngIf="request.id>0 && isGranted('Pages.Manage.Contractor')" type="submit"
+                        <!--<button *ngIf="request.id>0 && isGranted('Pages.Manage.Contractor')" type="submit"
                                 [disabled]="saving"
                                 class="btn btn-primary"
                                 aria-label="Close">
@@ -351,7 +353,7 @@
                                 class="btn btn-primary mr-5"
                                 aria-label="Close" (click)="save(2)">
                             {{ "SendToConsultant" | localize }}
-                        </button>
+                        </button>-->
                     </form>
 
                 </div>
@@ -496,7 +498,7 @@
                         </tab>
                     </tabset>
 
-                 
+
                 </div>
             </div>
         </div>
