--- a/angular/src/app/requests/request-view/request-view.component.html
+++ b/angular/src/app/requests/request-view/request-view.component.html
@@ -184,36 +184,47 @@
                                     </label>
 
                                 </div>
+                                <div class="form-group row required col-2">
+                                    <label class="col-md-6 col-form-label" for="ADDRESS">
+                                        {{ "Hours" | localize }}
+                                    </label>
+                                    <div class="col-md-5">
+                                        <input type="number"
+                                               min="1" max="60"
+                                               class="form-control"
+                                               name="Hours"
+                                               id="Hours"
+                                               required
+                                               [(ngModel)]="request.hours"
+                                               #HoursModel="ngModel"
+                                               #Hours />
+                                        <!--<abp-validation-summary [control]="HoursModel"
+                                                                [controlEl]="Hours"></abp-validation-summary>-->
+                                        <!--(change)="request.hours < 0 ? request.hours = 0 : request.hours; request.hours > 60 ? request.hours = 0 : request.hours;"-->
+                                    </div>
+                                </div>
 
                                 <div class="form-group row required col-2">
                                     <label class="col-md-6 col-form-label" for="ADDRESS">
                                         {{ "Min" | localize }}
                                     </label>
                                     <div class="col-md-5">
-                                        <input type="number" disabled
+                                        <input type="number"
                                                min="1" max="60"
                                                class="form-control"
-                                               name="inspectionTime"
-                                               id="inspectionTime"
-                                               [(ngModel)]="request.min">
+                                               name="Min"
+                                               id="Min"
+                                               required
+                                               [(ngModel)]="request.min"
+                                               #MinModel="ngModel"
+                                               #Min />
+                                        <!--<abp-validation-summary [control]="MinModel"
+                                                                [controlEl]="Min"></abp-validation-summary>-->
                                         <!--(change)="hourse < 0 ? hourse = 0 : hourse; hourse > 60 ? hourse = 0 : hourse;"-->
                                     </div>
                                 </div>
 
-                                <div class="form-group row required col-2">
-                                    <label class="col-md-6 col-form-label" for="ADDRESS">
-                                        {{ "Hours" | localize }}
-                                    </label>
-                                    <div class="col-md-5">
-                                        <input type="number" disabled
-                                               min="1" max="60"
-                                               class="form-control"
-                                               name="inspectionTime"
-                                               id="inspectionTime"
-                                               [(ngModel)]="request.hours">
-                                        <!--(change)="request.hours < 0 ? request.hours = 0 : request.hours; request.hours > 60 ? request.hours = 0 : request.hours;"-->
-                                    </div>
-                                </div>
+
                             </div>
 
                             <div class="form-group row required col-6">
@@ -233,7 +244,7 @@
                                 </div>
                             </div>
 
-                            <div class="form-group row required col-6">
+                            <!--<div class="form-group row required col-6">
                                 <label class="col-md-3 col-form-label" for="ADDRESS">
                                     {{ "ChooseProject" | localize }}
                                 </label>
@@ -248,7 +259,7 @@
                                     <abp-validation-summary [control]="projectModel"
                                                             [controlEl]="project"></abp-validation-summary>
                                 </div>
-                            </div>
+                            </div>-->
 
                             <div class="form-group row required col-6">
                                 <label class="col-md-3 col-form-label" for="DistrictName">
@@ -273,7 +284,7 @@
                                     {{ "PhoneNumberSiteResponsible1" | localize }}
                                 </label>
                                 <div class="col-md-9">
-                                    <input type="number" disabled
+                                    <input type="text" disabled
                                            class="form-control"
                                            name="phomeNumberSiteResponsibleOne"
                                            id="phomeNumberSiteResponsibleOne"
@@ -291,7 +302,7 @@
                                     {{ "PhoneNumberSiteResponsible2" | localize }}
                                 </label>
                                 <div class="col-md-9">
-                                    <input type="number" disabled
+                                    <input type="text" disabled
                                            class="form-control"
                                            name="phomeNumberSiteResponsibleTwo"
                                            id="phomeNumberSiteResponsibleTwo"
