--- a/angular/src/app/requests/request-edit/request-edit.component.html
+++ b/angular/src/app/requests/request-edit/request-edit.component.html
@@ -423,16 +423,18 @@
         </div>
     </section>
 
-    <section class="content px-2" *ngIf="hasSample && request.id>0">
-        <div class="container-fluid">
+    <section class="content px-2" >
+        <div class="container-fluid" *ngIf="showTabs">
             <div class="col-container">
                 <div class="card-body card ng-tns-c101-3" style="width:100% !important;">
                     <tabset>
-                        <tab [heading]="'InspectionTest' | localize" class="pt-3 px-2">
-                            <form class="form-horizontal"
+
+                        <!--[style.display]="request.hasSample==1 ? 'block': 'none'"-->
+                        <tab *ngIf="showTestTab" [heading]="'InspectionTest' | localize" class="pt-3 px-2">
+                            <form class="form-horizontal" *ngIf="request.status==1"
                                   autocomplete="off"
                                   #requestInspectionForm="ngForm"
-                                  (ngSubmit)="saveProductItems()">
+                                  (ngSubmit)="saveInspectionTest()">
 
                                 <div class="row" style="display: -webkit-box !important">
                                     <div class="form-group row col-8 required">
@@ -472,7 +474,7 @@
                                             <th>{{ "Name" | localize }}</th>
                                             <th>{{ "Code" | localize }}</th>
                                             <th>{{ "Cost" | localize }}</th>
-                                            <th style="width: 310px;" *ngIf="isGranted('Pages.Manage.Contractor')"></th>
+                                            <th style="width: 310px;" *ngIf="isGranted('Pages.Manage.Contractor') && request.status==1"></th>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -480,7 +482,7 @@
                                             <td>{{ requestTest.name }}</td>
                                             <td>{{ requestTest.code }}</td>
                                             <td>{{ requestTest.cost}}</td>
-                                            <td *ngIf="isGranted('Pages.Manage.Contractor')">
+                                            <td *ngIf="isGranted('Pages.Manage.Contractor') && request.status==1">
 
                                                 <button type="button"
                                                         class="btn btn-sm bg-danger mx-2"
@@ -495,11 +497,11 @@
                             </div>
                         </tab>
 
-                        <tab [heading]="'ProjectItems' | localize" class="pt-3 px-2">
-                            <form class="form-horizontal"
+                        <tab *ngIf="showTabs" [heading]="'ProjectItems' | localize" class="pt-3 px-2">
+                            <form class="form-horizontal" *ngIf="request.status==1"
                                   autocomplete="off"
                                   #projectItemsForm="ngForm"
-                                  (ngSubmit)="saveProductItems()">
+                                  (ngSubmit)="saveProjectItems()">
 
                                 <div class="row" style="display: -webkit-box !important">
                                     <div class="form-group row col-8 required">
@@ -539,7 +541,7 @@
                                             <th>{{ "Name" | localize }}</th>
                                             <th>{{ "Description" | localize }}</th>
                                             <th>{{ "Qty" | localize }}</th>
-                                            <th style="width: 310px;" *ngIf="isGranted('Pages.Manage.Contractor')"></th>
+                                            <th style="width: 310px;" *ngIf="isGranted('Pages.Manage.Contractor') && request.status==1"></th>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -547,7 +549,7 @@
                                             <td>{{ requestProjectItem.requestProjectItem.name }}</td>
                                             <td>{{ requestProjectItem.requestProjectItem.description }}</td>
                                             <td>{{ requestProjectItem.requestProjectItem.quantity}}</td>
-                                            <td *ngIf="isGranted('Pages.Manage.Contractor')">
+                                            <td *ngIf="isGranted('Pages.Manage.Contractor') && request.status==1">
                                                 <button type="button" *ngIf="isGranted('Pages.Manage.Project')"
                                                         class="btn btn-sm bg-danger mx-2"
                                                         (click)="deleteRequestItem(requestProjectItem)">
@@ -560,7 +562,7 @@
                                 </table>
                             </div>
                         </tab>
-                        <tab [heading]="'History' | localize" class="pt-3 px-2">
+                        <tab *ngIf="showTabs"  [heading]="'History' | localize" class="pt-3 px-2">
                             <div class="table-responsive">
                                 <table class="table table-striped table-bordered">
                                     <thead class="bg-light">
