--- a/angular/src/app/observer/observer.component.html
+++ b/angular/src/app/observer/observer.component.html
@@ -94,7 +94,7 @@
                                     <th>{{ "TownShip" | localize }}</th>
                                     <th>{{ "PhoneNumber" | localize }}</th>
                                     <!--<th>{{ "Contract_Name" | localize }}</th>-->
-                                    <th style="width: 310px;">{{ "Actions" | localize }}</th>
+                                    <th style="width: 310px;"></th>
                                 </tr>
                             </thead>
                             <tbody>
