--- a/angular/src/app/project/project.component.html
+++ b/angular/src/app/project/project.component.html
@@ -6,7 +6,7 @@
                     <h1>{{ "Projects" | localize }}</h1>
                 </div>
                 <div class="col-6 text-right">
-                    <a href="javascript:;" class="btn bg-blue" (click)="createProject()" *ngIf="isGranted('Pages.Manage.Project')">
+                    <a href="javascript:;" class="btn bg-blue" (click)="createProject()" *ngIf="(isGranted('Pages.Manage.Project')|| isGranted('Pages.Manage.Contractor'))">
                         <i class="fa fa-plus-square"></i>
                         {{ "Create" | localize }}
                     </a>
