--- a/angular/src/app/requests/request-create/request-create.component.html
+++ b/angular/src/app/requests/request-create/request-create.component.html
@@ -40,21 +40,21 @@
                             </div>
 
                             <!--<div class="form-group row required col-6">
-                                <label class="col-md-3 col-form-label" for="Name">
-                                    {{ "ProjectName" | localize }}
-                                </label>
-                                <div class="col-md-9">
-                                    <input type="text"
-                                           class="form-control" disabled
-                                           name="projectname"
-                                           id="projectname"
-                                           [(ngModel)]="projectName"
-                                           #projectnameModel="ngModel"
-                                           #projectnameE1 />
-                                    <abp-validation-summary [control]="projectnameModel"
-                                                            [controlEl]="projectnameE1"></abp-validation-summary>
-                                </div>
-                            </div>-->
+        <label class="col-md-3 col-form-label" for="Name">
+            {{ "ProjectName" | localize }}
+        </label>
+        <div class="col-md-9">
+            <input type="text"
+                   class="form-control" disabled
+                   name="projectname"
+                   id="projectname"
+                   [(ngModel)]="projectName"
+                   #projectnameModel="ngModel"
+                   #projectnameE1 />
+            <abp-validation-summary [control]="projectnameModel"
+                                    [controlEl]="projectnameE1"></abp-validation-summary>
+        </div>
+    </div>-->
 
 
                             <div class="form-group row required col-6">
@@ -68,7 +68,7 @@
                                            id="projectContractNumber"
                                            [(ngModel)]="projectContractNumber" />
                                     <!--<abp-validation-summary [control]="contractNumberModel"
-                                    [controlEl]="contractNumber"></abp-validation-summary>-->
+            [controlEl]="contractNumber"></abp-validation-summary>-->
                                 </div>
                             </div>
                             <div class="form-group row required col-6">
@@ -151,7 +151,7 @@
                                     <input type="date" [disabled]="request.id>0"
                                            class="form-control"
                                            name="inspectionDate"
-                                           [min]="minDate"
+                                           [min]="minDateNextDay"
                                            id="inspectionDate"
                                            required
                                            [(ngModel)]="InspectionDatemodel"
@@ -209,6 +209,22 @@
 
 
                             </div>
+                            <div class="form-group row required col-6">
+                                <label class="col-md-3 col-form-label" for="ADDRESS">
+                                    {{ "TownShip" | localize }}
+                                </label>
+                                <div class="col-md-9">
+                                    <select name="townShip"
+                                            class="form-control" [disabled]="request.id>0"
+                                            id="townShip" [(ngModel)]="request.townShipId"
+                                            #townShipModel="ngModel"
+                                            #townShip required>
+                                        <option *ngFor="let townShip of allTownShips" [value]="townShip.id">{{townShip.name | localize}}</option>
+                                    </select>
+                                    <abp-validation-summary [control]="townShipModel"
+                                                            [controlEl]="townShip"></abp-validation-summary>
+                                </div>
+                            </div>
                             <div class="form-group row  col-6">
                                 <label class="col-md-3 col-form-label" for="Description">
                                     {{ "Commetns" | localize }}
@@ -252,7 +268,7 @@
                                 </label>
                                 <div class="col-md-9">
                                     <input type="text" [disabled]="request.id>0"
-                                             oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*?)\..*/g, '$1');"
+                                           oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*?)\..*/g, '$1');"
                                            class="form-control"
                                            name="phomeNumberSiteResponsibleOne"
                                            id="phomeNumberSiteResponsibleOne"
@@ -284,21 +300,21 @@
                             </div>
 
                             <!--<div class="form-group row required col-6">
-                                <label class="col-md-3 col-form-label" for="ADDRESS">
-                                    {{ "MainRequestTypes" | localize }}
-                                </label>
-                                <div class="col-md-9">
-                                    <select name="mainRequestType" [disabled]="request.id>0"
-                                            class="form-control"
-                                            id="mainRequestType" [(ngModel)]="request.mainRequestType"
-                                            #mainRequestTypeModel="ngModel"
-                                            #mainRequestType required>
-                                        <option *ngFor="let mainRequestType of mainRequestTypes" [value]="mainRequestType.id">{{mainRequestType.name | localize}}</option>
-                                    </select>
-                                    <abp-validation-summary [control]="mainRequestTypeModel"
-                                                            [controlEl]="mainRequestType"></abp-validation-summary>
-                                </div>
-                            </div>-->
+        <label class="col-md-3 col-form-label" for="ADDRESS">
+            {{ "MainRequestTypes" | localize }}
+        </label>
+        <div class="col-md-9">
+            <select name="mainRequestType" [disabled]="request.id>0"
+                    class="form-control"
+                    id="mainRequestType" [(ngModel)]="request.mainRequestType"
+                    #mainRequestTypeModel="ngModel"
+                    #mainRequestType required>
+                <option *ngFor="let mainRequestType of mainRequestTypes" [value]="mainRequestType.id">{{mainRequestType.name | localize}}</option>
+            </select>
+            <abp-validation-summary [control]="mainRequestTypeModel"
+                                    [controlEl]="mainRequestType"></abp-validation-summary>
+        </div>
+    </div>-->
 
                             <div class="form-group row required col-6">
                                 <label class="col-md-3 col-form-label" for="isLabTest">
