--- a/angular/src/app/requests/request-view/request-view.component.html
+++ b/angular/src/app/requests/request-view/request-view.component.html
@@ -199,7 +199,7 @@
                                                #HoursModel="ngModel"
                                                #Hours />
                                         <!--<abp-validation-summary [control]="HoursModel"
-                                                                [controlEl]="Hours"></abp-validation-summary>-->
+                                        [controlEl]="Hours"></abp-validation-summary>-->
                                         <!--(change)="request.hours < 0 ? request.hours = 0 : request.hours; request.hours > 60 ? request.hours = 0 : request.hours;"-->
                                     </div>
                                 </div>
@@ -219,7 +219,7 @@
                                                #MinModel="ngModel"
                                                #Min />
                                         <!--<abp-validation-summary [control]="MinModel"
-                                                                [controlEl]="Min"></abp-validation-summary>-->
+                                        [controlEl]="Min"></abp-validation-summary>-->
                                         <!--(change)="hourse < 0 ? hourse = 0 : hourse; hourse > 60 ? hourse = 0 : hourse;"-->
                                     </div>
                                 </div>
@@ -227,6 +227,22 @@
 
                             </div>
 
+                            <div class="form-group row required col-6">
+                                <label class="col-md-3 col-form-label" for="ADDRESS">
+                                    {{ "TownShip" | localize }}
+                                </label>
+                                <div class="col-md-9">
+                                    <select name="townShip"
+                                            class="form-control" disabled
+                                            id="townShip" [(ngModel)]="request.townShipId"
+                                            #townShipModel="ngModel"
+                                            #townShip required>
+                                        <option *ngFor="let townShip of allTownShips" [value]="townShip.id">{{townShip.name | localize}}</option>
+                                    </select>
+                                    <abp-validation-summary [control]="townShipModel"
+                                                            [controlEl]="townShip"></abp-validation-summary>
+                                </div>
+                            </div>
                             <div class="form-group row required col-6">
                                 <label class="col-md-3 col-form-label" for="Description">
                                     {{ "Commetns" | localize }}
@@ -245,21 +261,21 @@
                             </div>
 
                             <!--<div class="form-group row required col-6">
-                                <label class="col-md-3 col-form-label" for="ADDRESS">
-                                    {{ "ChooseProject" | localize }}
-                                </label>
-                                <div class="col-md-9">
-                                    <select name="project" [disabled]="request.id>0"
-                                            class="form-control" disabled
-                                            id="project" [(ngModel)]="request.projectId"
-                                            #projectModel="ngModel"
-                                            #project>
-                                        <option *ngFor="let project of projects" [value]="project.id">{{project.name}}</option>
-                                    </select>
-                                    <abp-validation-summary [control]="projectModel"
-                                                            [controlEl]="project"></abp-validation-summary>
-                                </div>
-                            </div>-->
+        <label class="col-md-3 col-form-label" for="ADDRESS">
+            {{ "ChooseProject" | localize }}
+        </label>
+        <div class="col-md-9">
+            <select name="project" [disabled]="request.id>0"
+                    class="form-control" disabled
+                    id="project" [(ngModel)]="request.projectId"
+                    #projectModel="ngModel"
+                    #project>
+                <option *ngFor="let project of projects" [value]="project.id">{{project.name}}</option>
+            </select>
+            <abp-validation-summary [control]="projectModel"
+                                    [controlEl]="project"></abp-validation-summary>
+        </div>
+    </div>-->
 
                             <div class="form-group row required col-6">
                                 <label class="col-md-3 col-form-label" for="DistrictName">
@@ -379,7 +395,7 @@
                 <div class="card-body card ng-tns-c101-3" style="width:100% !important;">
                     <tabset>
                         <tab [heading]="'InspectionTest' | localize" class="pt-3 px-2">
-                       
+
                             <div class="table-responsive">
                                 <table class="table table-striped table-bordered">
                                     <thead class="bg-light">
@@ -387,7 +403,7 @@
                                             <th>{{ "Name" | localize }}</th>
                                             <th>{{ "Code" | localize }}</th>
                                             <th>{{ "Cost" | localize }}</th>
-                                          
+
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -395,7 +411,7 @@
                                             <td>{{ requestTest.name }}</td>
                                             <td>{{ requestTest.code }}</td>
                                             <td>{{ requestTest.cost}}</td>
-                                           
+
                                         </tr>
                                     </tbody>
                                 </table>
@@ -403,7 +419,7 @@
                         </tab>
 
                         <tab [heading]="'ProjectItems' | localize" class="pt-3 px-2">
-                         
+
                             <div class="table-responsive">
                                 <table class="table table-striped table-bordered">
                                     <thead class="bg-light">
@@ -411,7 +427,7 @@
                                             <th>{{ "Name" | localize }}</th>
                                             <th>{{ "Description" | localize }}</th>
                                             <th>{{ "Qty" | localize }}</th>
-                                        
+
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -419,12 +435,47 @@
                                             <td>{{ requestProjectItem.requestProjectItem.name }}</td>
                                             <td>{{ requestProjectItem.requestProjectItem.description }}</td>
                                             <td>{{ requestProjectItem.requestProjectItem.quantity}}</td>
-                                           
+
                                         </tr>
                                     </tbody>
                                 </table>
                             </div>
                         </tab>
+
+                        <tab [heading]="'Attachments' | localize" class="pt-3 px-2">
+                            
+                            <div class="table-responsive">
+                                <table class="table table-striped table-bordered">
+                                    <thead class="bg-light">
+                                        <tr>
+                                            <!--<th>{{ "Name" | localize }}</th>-->
+                                            <th style="width: 310px;">{{ "Description" | localize }}</th>
+                                            <th style="width: 310px;"></th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr *ngFor="let attachment of attachments">
+                                            <!--<td><a  href="{{baseURL+attachment.fileURL}}" download> {{ baseURL+attachment.fileURL}}</a></td>-->
+                                            <td>{{ attachment.description }}</td>
+                                            <td>
+                                                <button type="button" (click)="downloadMyFile(baseURL+attachment.fileURL,attachment.fileName)"
+                                                        class="btn btn-sm bg-secondary">
+                                                    <i class="fa fa-download"></i>
+                                                    {{ "Download" | localize }}
+                                                </button>
+                                                <!--<button type="button" *ngIf="isGranted('Pages.Manage.Contractor')"
+                                                        class="btn btn-sm bg-danger mx-2"
+                                                        (click)="deleteAttachment(attachment)">
+                                                    <i class="fas fa-trash"></i>
+                                                    {{ "Delete" | localize }}
+                                                </button>-->
+                                            </td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </tab>
+
                         <tab [heading]="'History' | localize" class="pt-3 px-2">
                             <div class="table-responsive">
                                 <table class="table table-striped table-bordered">
