--- a/angular/src/app/requests/requests.component.html
+++ b/angular/src/app/requests/requests.component.html
@@ -180,13 +180,14 @@
                                         </div>
                                     </td>
                                     <td>
-                                        <button type="button"
+                                        <button type="button" *ngIf="isGranted('Pages.Manage.Observer')==false"
                                                 class="btn btn-sm bg-secondary"
                                                 (click)="editRow(request)">
                                             <i class="fas fa-pencil-alt"></i>
                                             {{ "Edit" | localize }}
                                         </button>
-                                        <button type="button"
+                                      
+                                        <button type="button" *ngIf="!isGranted('Pages.Manage.Observer')"
                                                 class="btn btn-sm bg-danger mx-2"
                                                 (click)="delete(request)">
                                             <i class="fas fa-trash"></i>
